# TgBotSbor

./: .gitignore  Dockerfile  README.md  SmileAIbot.py  caries.py  client_secret.json  cut_image.py  db.sqlite3  diagram.drawio  docker-compose.yml  google_drive.py  main.py  pyproject.toml  requirements.txt  services.py  smile-ai-bot-1dccd401d6ed.json
.github/workflows/: deploy.yml
bot/: Dockerfile  main.py  my_dataclasses.py  requirements.txt
bot/config_data/: .env.example  config.py
bot/external_services/: backend_requests.py
bot/handlers/: logging_utils.py  user_handlers.py
bot/keyboards/: user_keyboards.py
bot/middlewares/: custom_logging.py
bot/queue/: rabbitmq_client.py
config_data/: .env  config.py
core/: config.py
core/models/: __init__.py  base.py  items.py  user.py
external_services/: backend_requests.py
handlers/: user_handlers.py
items/: crud.py  schemas.py  views.py
keyboards/: user_keyboards.py
neiro/: Dockerfile  __init__.py  caries.py  cut_image.py  pipe.py  rabbitmq_worker.py  requirements.txt  single_tooth.py  transform.py
save/: Dockerfile  config.py  db_init.py  google_drive_client.py  log_consumer.py  main.py  queue_handler.py  requirements.txt
tests/: test_aiogram_lib.py
user/: crud.py  schemas.py  users_views.py  views.py
